@@ -1,3 +1,5 @@
+* Added support to :attachments (thanks to @andrewtimberlake)
+
 # Version 0.1
 
 * First release
